src/styles/global.css
@font-face {
  font-family: Inter;
  src: url("../assets/fonts/Inter-VariableFont_opsz\,wght.ttf");
  font-weight: 100 900;
  font-style: normal;
}

@font-face {
  font-family: Inter;
  src: url("../assets/fonts/Inter-Italic-VariableFont_opsz\,wght.ttf");
  font-weight: 100 900;
  font-style: italic;
}

:root {
  --text: 0, 0%, 80%;
  --text-primary: 0, 0%, 100%;
  --text-primary-dark: 0, 0%, 100%;
  --text-secondary: 220, 60%, 50%;
  --text-dark: 0, 0%, 70%;
  --background: 210, 10%, 8%;
  --background-yellow: 35, 30%, 30%;
  --background-blue: 220, 50%, 30%;
  --primary: 220, 70%, 60%;
  --secondary: 220, 100%, 7%;
  --accent: 220, 100%, 60%;

  --card-border-highlight: 50, 100%, 90%;
  --card-border: 0, 0%, 35%; 
  --card-shadow: 0 1px 1px rgba(0, 0, 0, 0.25),
                  0 2px 2px rgba(0, 0, 0, 0.15),
                  0 4px 4px rgba(0, 0, 0, 0.15),
                  0 8px 8px rgba(0, 0, 0, 0.15),
                  0 16px 16px rgba(0, 0, 0, 0.15),
                  0 32px 32px rgba(0, 0, 0, 0.15),
                  0 64px 64px rgba(0, 0, 0, 0.15);

  --hero-padding: 2rem;
}

body {
  font-family: "Inter";
  background: hsl(var(--background));
  color: hsl(var(--text));
  min-height: 100vh;
}

h2 {
  font-size: 2.2rem;
  font-weight: 800;
}

#hero {
  position: relative;
  width: 100%;
  height: 100dvh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 5rem;
  background: radial-gradient(ellipse 50% 50% at top center, hsla(var(--background-yellow), 0.25), hsla(var(--background), 0)),
              radial-gradient(circle 400px at 25% 60%, hsla(var(--background-blue), 0.25), hsla(var(--background), 0));
}

body::before {
  content: '';
  position: absolute;
  inset: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  background: hsl(var(--background));
  filter: url(#grainy);
}

.hero-content {
  display: flex;
  justify-content: center;
  gap: 7rem;
}

#hero-img {
  max-width: 300px;
  border: 5px solid white;
  border-radius: 10px;
}

.intro-container {
  display: flex;
  width: 35%;
  flex-direction: column;
  justify-content: center;
  align-items: start;
}

.greeting {
  font-size: 1.3rem;
  font-weight: 600;
  color: hsl(var(--text-secondary));
}

.name {
  font-size: 3.5rem;
  font-weight: 800;
  color: hsl(var(--text-primary));
  margin-bottom: -0.4rem;
}

.job-title {
  font-size: 2.2rem;
  font-weight: 700;
  color: hsl(var(--text));
}

.description {
  margin-top: 0.6rem;
  font-size: 1.125rem;
  font-weight: 500;
}

.see-my-work {
  margin-top: 1.5rem;
  text-decoration: none;
  color: hsl(var(--accent));
  font-size: 1.125rem;
  font-weight: 600;
  border: 1px solid hsl(var(--accent));
  border-radius: 10px;
  padding: 0.5rem 1.2rem;
  box-shadow: 0 2px 2px hsla(var(--accent), .30),
              0 4px 4px hsla(var(--accent), .15),
              0 8px 8px hsla(var(--accent), .05)
              ;
}

.logo, .resume-link, .mailto-link, .social-media-links {
  position: absolute;
  color: hsl(var(--text-primary));
}

.logo {
  top: var(--hero-padding);
  left: var(--hero-padding);
  font-size: 2rem;
  font-weight: 800;
}

.resume-link {
  top: var(--hero-padding);
  right: var(--hero-padding);
  text-decoration: none;
  font-weight: 600;
  border: 1px solid hsl(var(--text-primary));
  border-radius: 10px;
  padding: 0.5rem;
  box-shadow: 0 2px 4px hsla(var(--text-primary), .30);
}

.mailto-link {
  bottom: var(--hero-padding);
  left: var(--hero-padding);
  writing-mode: sideways-lr;
  text-decoration: none;
  letter-spacing: 2px;
  font-size: 0.8rem;
}

.mailto-link:hover {
  text-decoration: underline;
  text-underline-offset: 4px;
}

.social-media-links {
  bottom: var(--hero-padding);
  right: var(--hero-padding);
  width: 1.5rem;
  display: flex;
  flex-direction: column;
  gap: 1.2rem;
}

.socials-link {
  color: hsl(var(--text-primary));
  display: grid;
  align-content: center;
}

.socials-link svg {
  width: 100%;
  aspect-ratio: 1;
}

#projects {
  min-height: 100dvh;
  padding: var(--hero-padding);
  display: grid;
  justify-content: center;
}

.projects-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: min-content;
  max-width: 1600px;
  padding: 2rem;
  column-gap: min(5%, 10rem);
  row-gap: 4rem;
}

.projects-intro-container {
  grid-column: 1 / span 3;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2rem;
  gap: 0.5rem;
}

.projects-description {
  max-width: 75ch;
  text-align: center;
  font-size: 1.2rem;
}

#projects .card {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-auto-rows: min-content;
  gap: 0.5rem;
}

#projects .card .styled-border, #projects .card .project-description {
  grid-column: 1 / span 2;
}

#projects .styled-border {
  position: relative;
  aspect-ratio: 16/9;
  border-radius: 5px;
  padding: 1px;
  margin-bottom: 1.5rem;
  background: radial-gradient(ellipse 40% 50% at top center, hsl(var(--card-border-highlight)), hsl(var(--card-border)));
  box-shadow: var(--card-shadow);
}

.styled-border .screenshot {
  width: 100%;
  height: 100%;
  border-radius: 5px;
  background: hsl(var(--card-border));
}

.styled-border .more-info {
  position: absolute;
  inset: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
}

.project-links {
  display: flex;
  gap: 0.6rem;
  justify-content: end;
}

.project-links a {
  color: hsl(var(--text));
}

.project-links svg {
  width: 2rem;
  aspect-ratio: 1;
}

